--- a/hep-th-0605196/unitarity-nonlocality3.tex
+++ b/hep-th-0605196/unitarity-nonlocality3.tex
@@ -1,4 +1,4 @@
-\input harvmac
+\input ../helpers/harvmac-psu
 \input graphicx
 %\input pdftexconfig
 %\input epsf
@@ -448,7 +448,7 @@ The black hole information paradox apparently indicates the need for a fundament
 
 \newsec{Introduction}
 
-Hawking's argument that black holes destroy information\refs{\Hawkunc} and thus violate quantum mechanics initiated a crisis  in physics.  In short, in the wake of this analysis, there is no apparent way to reconcile 
+Hawking's argument that black holes destroy information \refs{\Hawkunc} and thus violate quantum mechanics initiated a crisis  in physics.  In short, in the wake of this analysis, there is no apparent way to reconcile 
 the basic principles of locality and energy conservation within known extensions of quantum physics.  A paradox results.
 
 One should consider the possibility that this crisis is of equal importance  to the ultraviolet crises in classical physics that were only resolved by the advent of quantum mechanics.  In particular, one might compare the black hole paradox to that of the classical instability of matter, which was only avoided by introduction of a fundamentally new ingredient,  quantization.
@@ -737,7 +737,7 @@ Thus this expression is pure negative frequency in Kruskal time, the appropriate
 
 From the preceding argument one finds that the effect of the large stress tensor of the ultra-high energy outside modes is cancelled by that of the inside modes.  Indeed, this result could have been anticipated from another perspective, that of  ``nice slice" evolution, and this indicates a full reconciliation of the two viewpoints, with no evidence of a physical role for the ultraplanckian precursors of Hawking radiation.
 
-\Ifig{\Fig\Krusk}{The Kruskal diagram for the Schwarzschild geometry, together with two kinds of time slices.  An explicit construction of the first kind (solid line) is given by \LPSTU: it consists of a segment of the hyperbola of constant $r=r_c$ for $U>V$, attached to the matching horizontal slice in the region $U<V$.  The second kind (dashed) consists of a horizontal segment for $U<V$, which terminates at the singularity.  Action of the Schwarzschild time translation $t\rightarrow t+\alpha$ on either of these slices generates a family of slices foliating the region outside the black hole, as well as the region at weak curvature inside the black hole.}{krusk}{4.5}
+\Ifig{\Fig\Krusk}{The Kruskal diagram for the Schwarzschild geometry, together with two kinds of time slices.  An explicit construction of the first kind (solid line) is given by \LPSTU: it consists of a segment of the hyperbola of constant $r=r_c$ for $U>V$, attached to the matching horizontal slice in the region $U<V$.  The second kind (dashed) consists of a horizontal segment for $U<V$, which terminates at the singularity.  Action of the Schwarzschild time translation $t\rightarrow t+\alpha$ on either of these slices generates a family of slices foliating the region outside the black hole, as well as the region at weak curvature inside the black hole.}{krusk-eps-converted-to.pdf}{4.5}
 
 
 This latter perspective follows from constructing a family of spatial slices that is ``as smooth as possible," or ``nice," and describing evolution on these slices.  The Kruskal diagram for the Schwarzschild geometry is shown in \Krusk, which also shows two possible constructions of one slice in such a family.  The first type of slice avoids the planckian region near the singularity completely.  Or, with natural evolution tracking infalling observers, one would get a slice like the second, which enters this planckian region.  The intrinsic spatial geometry of the two slices is shown in Fig.~2 and Fig.~3.  Either of these slices agrees with the constant Schwarzschild $t$ slice as $r\rightarrow\infty$.  The full family of slices can be constructed by applying Schwarzschild time translations to either of the slices shown, {\it i.e.} acting by $t\rightarrow t+\alpha$.  Note that in Kruskal coordinates \kruskdef, these translations have action
@@ -745,9 +745,9 @@ This latter perspective follows from constructing a family of spatial slices tha
 \eqn\kruskxm{U\rightarrow e^{-\alpha/4M}U\ ,\ V\rightarrow e^{\alpha/4M}V\ .}
 %
 
-\Ifig{\Fig\nosing}{The intrinsic geometry of a member of the family of slices of \Krusk\ that avoids the strong curvature region}{nosing}{3.3}
+\Ifig{\Fig\nosing}{The intrinsic geometry of a member of the family of slices of \Krusk\ that avoids the strong curvature region}{nosing.eps}{3.3}
 
-\Ifig{\Fig\singslice}{The intrinsic geometry of a member of the family of slices of \Krusk\ that intersects the singularity.}{singslice}{3.3}
+\Ifig{\Fig\singslice}{The intrinsic geometry of a member of the family of slices of \Krusk\ that intersects the singularity.}{singslice.eps}{3.3}
 
 With either construction, it appears that evolution is smooth and causal in the vicinity of the horizon.  Moreover, 
 a defining property of the Hawking state can be taken to be that it is annihilated by operators corresponding to positive frequency wavepackets that have support near or outside the horizon and that have frequencies $\gg 1/M$.  This follows from adiabaticity, in an extension of the argument given by \LPSTU\ -- if the initial state is vacuum, evolution on our slices in the vicinity of the horizon and outside is adiabatic for energies $E\gg 1/M$.  While this adiabaticity would break down near the singularity, locality and causality would seem to predict that no consequence of this could be seen outside the horizon.  
@@ -834,7 +834,7 @@ Next consider the relative separation of the modes.  If the metric of \Krusk\ we
 Indeed, the statement that the separation at most grows as $t_2-t_1$ is slice independent.
 On the second type of slice, shown in \singslice, the separation is possibly even less, $\calo(M)$, but there one needs planckian physics to describe the states.  
 
-\Ifig{\Fig\intmodes}{A representation of the situation described in the text, on a slice avoiding the singularity.  Both a Hawking mode and its inside counterpart are represented, in the process of separation from the horizon.  A mode that entered the black hole at an earlier time is boosted relative to these modes by an amount exponential in this time difference, whereas its distance along the slice is linear in the time.}{intmodes}{4}
+\Ifig{\Fig\intmodes}{A representation of the situation described in the text, on a slice avoiding the singularity.  Both a Hawking mode and its inside counterpart are represented, in the process of separation from the horizon.  A mode that entered the black hole at an earlier time is boosted relative to these modes by an amount exponential in this time difference, whereas its distance along the slice is linear in the time.}{intmodes.eps}{4}
 
 
 An essential question is whether one can think of the Hilbert space on the the time slice $t=t_2$ as decomposing into separate factors describing the infalling mode and the outgoing Hawking mode; see \intmodes.  As we've described, this is what is required to give a clear argument that one can trace over states of infalling particles to find a mixed outside density matrix.  
