--- a/2212.14551/models-compare-v2.tex
+++ b/2212.14551/models-compare-v2.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%latex file%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\documentstyle[12pt]{article}
 %\documentclass[12pt,epsf,epsfig]{article}
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \pdfoutput=1
 %\usepackage{epsf,epsfig}
  \usepackage{mciteplus}
@@ -20,10 +20,53 @@
 %\usepackage[dvips]{graphicx}
 \usepackage{latexsym}
 \usepackage{mathtools}
-%\usepackage{showlabels}
-\setlength{\oddsidemargin}{-0.05cm} \setlength{\textwidth}{16.5cm}
-\setlength{\topmargin}{-1.0 cm}
-\setlength{\textheight}{21.5cm}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 %\def\be{\begin{equation}}
 \usepackage{amsmath}
 \numberwithin{equation}{section}
@@ -72,68 +115,25 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%
 \begin{document}
-
-\thispagestyle{empty}
-\begin{titlepage}
- % \rightline{}
-  \bigskip
-
-  \bigskip\bigskip 
-
-
-
-
-  \bigskip
-
-\begin{center}
+\date{14 Dec 2023}
 %\centerline
-{\Large \bf {Comparing models for a unitary black hole S-matrix
-}}
-    \bigskip
-\bigskip
-\end{center}
-
-
-  \begin{center}
-
-
- \rm {Steven B. Giddings\footnote{\texttt{giddings@ucsb.edu}} }
-  \bigskip \rm
-\bigskip
-
-{Department of Physics, University of California, Santa Barbara, CA 93106, USA}  \\
-\rm
-
- % \bf {Write authors  }
-  \bigskip \rm
-\bigskip
- 
-\rm
-
-
-\bigskip
-\bigskip
-
-
+\title{Comparing models for a unitary black hole S-matrix
+\author{Steven B. Giddings\footnote{\texttt{giddings@ucsb.edu}} \\
+Department of Physics,\\
+University of California, Santa Barbara, CA 93106, USA}}
 
 % \vspace{2cm}
-  \end{center}
 
-   
+\maketitle
 
-\vspace{3cm}
-  \begin{abstract}
+\begin{abstract}
 This paper compares features, challenges, and puzzles of different models for a unitary black hole S-matrix, focussing on both recent nonisometric models, as well as ``nonviolent unitarization," which is based on new quantum interactions of a black hole.  As a foundation for comparison, the description of real-time Hawking evolution is first overviewed, including leading effects of gravitational dressing and backreaction.
 Connection is then made to qubit models for evolution, and some technology is outlined to facilitate their description. 
 Important features of both nonisometric models and nonviolent unitarization are investigated in qubit models, which illustrate essential differences between the respective approaches.  The nonisometric models present puzzles for understanding evolution of internal outgoing excitations, which can be excited by interactions such as particle decay.  Qubit models for nonviolent unitarization are further developed, and nicely illustrate aspects of that approach.
 Some remaining questions in generalizing to more complete models for evolution are discussed.  
+\end{abstract}
 
- \medskip
-  \noindent
-  \end{abstract}
-\bigskip \bigskip \bigskip 
-
-  \end{titlepage}
+\newpage
 
 \section{Introduction}
 
@@ -187,7 +187,7 @@ Gauge fixing is needed to describe the evolving quantum state, including  matter
 \beq\label{slices}
 x^\mu =\calx^\mu(t, x^i)\ 
 \eeq
-parameterizing these slices in general coordinates $x^\mu$.  Such slices, and evolution on them, are further discussed in \cite{SEHS,SE2d}\cite{GiPe1}.
+parameterizing these slices in general coordinates $x^\mu$.  Such slices, and evolution on them, are further discussed in \cite{SEHS,SE2d,GiPe1}
 %Such slices are also illustrated in Fig.~\ref{EFdiag}.  
 It is simplest to choose these slices to respect the spherical symmetry of the background metric.  Using the standard radial coordinate and an ingoing null coordinate $x^+$, these simplify to
 \beq\label{radslices}
@@ -202,7 +202,7 @@ with
 f= 1-\left(\frac{R}{r}\right)^{D-3}\ .
 \eeq
 It can be advantageous to take the slices to respect the time-translation symmetry $x^+\rightarrow x^+ + a$, and so take the simplified stationary 
-form\cite{NVU}\cite{SEHS}\cite{GiPe1}
+form\cite{NVU,SEHS,GiPe1}
 \beq\label{statslices}
 x^+= t+s(x)\quad,\quad r=r(x)\ .
 \eeq
@@ -268,7 +268,7 @@ For a ``gauge-fixing" specified by a  given slicing, determining $(N, N^i, q_{ij
 \beq\label{Hama}
 H = \sum_{A,A'} \left(A_{AA'} a^\dagger_A a_{A'} + B_{AA'} a^\dagger_A a^\dagger_{A'} + c.c. \right) + (A\rightarrow \tilde A)\ ,
 \eeq
-where $c.c.$ denotes conjugation that doesn't change operator ordering, and there is no mixing between $A$ and $\tilde A$ modes.  The coefficients $A_{AA'}$, $B_{AA'}$, $A_{\tA\tA'}$, $B_{\tA\tA'}$ may be expressed in terms of the mode basis and the metric coefficients, with explicit expressions given in \cite{SEHS,SE2d}\cite{GiPe1}.  
+where $c.c.$ denotes conjugation that doesn't change operator ordering, and there is no mixing between $A$ and $\tilde A$ modes.  The coefficients $A_{AA'}$, $B_{AA'}$, $A_{\tA\tA'}$, $B_{\tA\tA'}$ may be expressed in terms of the mode basis and the metric coefficients, with explicit expressions given in \cite{SEHS,SE2d,GiPe1}
 A specified initial state is then evolved by
 \beq\label{Uev}
 U(t_2,t_1)= e^{-i\int_{t_1}^{t_2} dt H}\ .
@@ -348,7 +348,7 @@ Given a vacuum state satisfying \eqref{physS}, other physical states may then be
 \eeq
 is gauge invariant, {\it i.e.} independent of $N, N^i$.  
 
-The gauge-invariance conditions \eqref{concomm}, \eqref{physS} may be solved perturbatively by constructing a gravitational dressing\cite{SGAlg,DoGi1,DoGi2,DoGi3,QGQF}\cite{DoGi4,SGsplit}.\footnote{Earlier work on this question includes \cite{Heem} and  \cite{KaLigrav}.   The first derived nontrivial commutators as arising from the constraints, but didn't give the dressed operators, and the second focussed on deriving {\it commuting} bulk operators.}  Defining $\kappa^2=32\pi G$, the metric variables are expanded about a background metric as
+The gauge-invariance conditions \eqref{concomm}, \eqref{physS} may be solved perturbatively by constructing a gravitational dressing\cite{SGAlg,DoGi1,DoGi2,DoGi3,QGQF,DoGi4,SGsplit}.\footnote{Earlier work on this question includes \cite{Heem} and  \cite{KaLigrav}.   The first derived nontrivial commutators as arising from the constraints, but didn't give the dressed operators, and the second focussed on deriving {\it commuting} bulk operators.}  Defining $\kappa^2=32\pi G$, the metric variables are expanded about a background metric as
 \beq
 \tilde g_{\mu\nu} = g_{\mu\nu} + \kappa h_{\mu\nu}\quad  , \quad 
 \tilde q_{ij}= q_{ij} + \kappa h_{ij}\quad ,\quad
@@ -512,9 +512,9 @@ Additional questions raised by interactions, {\it e.g.} regarding ultimate unita
 
 \subsection{Nonviolent unitarization}
 
-The approach of nonviolent unitarization\cite{SGmodels,NVNL,NVUEFT,NVNLT}\cite{NVU,BHQU} (NVU)  considers interactions between the BH Hilbert space and the environment, which can transfer information or entanglement out of the BH, but in a way that `minimally' affects the standard description of BHs, {\it e.g.} as described by infalling or other exterior observers.  Accomplishing the information transfer via interactions is similar to the physics by which the cavity described in the introduction reduces its entanglement.
+The approach of nonviolent unitarization \cite{SGmodels,NVNL,NVUEFT,NVNLT,NVU,BHQU} (NVU)  considers interactions between the BH Hilbert space and the environment, which can transfer information or entanglement out of the BH, but in a way that `minimally' affects the standard description of BHs, {\it e.g.} as described by infalling or other exterior observers.  Accomplishing the information transfer via interactions is similar to the physics by which the cavity described in the introduction reduces its entanglement.
 
-Qubit models for NVU are found by augmenting the hamiltonian \eqref{Hzero}: $H=H_0+\Delta H$, with two additional pieces.  The first is a term $\Delta H_I$ which describes the interactions between BH and environment states, and so can transfer entanglement from BH to environment.  The second is a term $\Delta H_{bh}$ which alters the evolution of the internal state of the BH.  The internal part of the state \eqref{HawkQ} has a ``frozen" character, in that the internal excitations simply persist unchanged; similar behavior is found for more complete states \eqref{matstate} based on nice slicings that avoid the singularity\cite{SEHS,SE2d}\cite{GiPe1}.  This is a feature of a particular gauge or picture for describing the state, which artificially retards evolution into the region near $r=0$.  In a more complete quantum description of the interior evolution, it is quite plausible that the natural dynamics ultimately leads to nontrivial evolution; {\it e.g.} it might begin mixing or scrambling the internal state on some timescale.  $\Delta H_{bh}$ is introduced to describe this aspect of evolution, which is analogous to mixing of internal states in the cavity described in the introduction.
+Qubit models for NVU are found by augmenting the hamiltonian \eqref{Hzero}: $H=H_0+\Delta H$, with two additional pieces.  The first is a term $\Delta H_I$ which describes the interactions between BH and environment states, and so can transfer entanglement from BH to environment.  The second is a term $\Delta H_{bh}$ which alters the evolution of the internal state of the BH.  The internal part of the state \eqref{HawkQ} has a ``frozen" character, in that the internal excitations simply persist unchanged; similar behavior is found for more complete states \eqref{matstate} based on nice slicings that avoid the singularity\cite{SEHS,SE2d,GiPe1}.  This is a feature of a particular gauge or picture for describing the state, which artificially retards evolution into the region near $r=0$.  In a more complete quantum description of the interior evolution, it is quite plausible that the natural dynamics ultimately leads to nontrivial evolution; {\it e.g.} it might begin mixing or scrambling the internal state on some timescale.  $\Delta H_{bh}$ is introduced to describe this aspect of evolution, which is analogous to mixing of internal states in the cavity described in the introduction.
 
 At the level of detailed qubit models, there are multiple possibilities.  $\Delta H_{bh}$ could induce general transitions  between BH states $|\hat K\rangle$, as well as mixing with the infalling states 
  $|\tilde K\rangle$.  A particularly simple possibility is if $\Delta H_{bh}$ conserves $H_0$.  It could couple multiple internal qubits, or even have a form as simple as $\Delta H_{bh}=h_{ij} \hat \psi^\dagger_i \hat \psi_j$ and/or $\Delta H_{bh}=h_{ij} \hat \psi_i \tilde \psi_j$, rearranging qubits.  We will also assume that there is a ``latency time" $\Delta T= R\Delta N$, such that $\Delta H_{bh}(T)$ only acts nontrivially on the first $N-\Delta N$ qubits; before the latency time, the internal qubits in \eqref{HawkQ} are unscrambled.  Different forms for $\Delta H_{bh}$ may also follow from different choices of gauge to describe internal evolution.  
@@ -551,7 +551,7 @@ Here we have defined a black hole entropy by $\exp\{S_{bh}\}=2^N$, for compariso
 
 This rate can be explained from a different argument.  For generic qubit state $|\psi_{bh}\rangle$, $\psi_0^\dagger$ acts to create {\it some} state with $\calo(1)$ norm.  Then, the transition rate to that state will not be exponentially suppressed.
 
-This kind of argument -- which can be refined\footnote{For {\it some} further discussion, see \cite{GiRo}.} -- sets the size of the couplings to the operators $\calo$, which we think of as acting on a ``quantum atmosphere" of the BH.  The same methods can be used to estimate the amplitude if the initial external state $|\psi_e\rangle$ is not vacuum, but instead something else, {\it e.g.} an incoming gravitational wave state\cite{BHQU}; that just changes which matrix element between external states enters in \eqref{matel}.  In either case, the ``nonviolence" assumption\cite{SGmodels,NVNL,NVUEFT,NVNLT}\cite{NVU,BHQU} is that the operator $\calo$ only transfers soft momenta and energies to the external state, {\it e.g.} with $\calo(1/R)$ sizes, although more general powers of $R$ can also be considered.  In qubit models, this is naturally implemented since the qubit excitations have energies $\sim 1/R$, as long as $\calo$ only acts on qubits that have begun to exit the horizon region.  The final result is that the interactions \eqref{HIex} not only yield entanglement transfer rates of size $\calo(1/R)$, but also 
+This kind of argument -- which can be refined\footnote{For {\it some} further discussion, see \cite{GiRo}.} -- sets the size of the couplings to the operators $\calo$, which we think of as acting on a ``quantum atmosphere" of the BH.  The same methods can be used to estimate the amplitude if the initial external state $|\psi_e\rangle$ is not vacuum, but instead something else, {\it e.g.} an incoming gravitational wave state\cite{BHQU}; that just changes which matrix element between external states enters in \eqref{matel}.  In either case, the ``nonviolence" assumption\cite{SGmodels,NVNL,NVUEFT,NVNLT,NVU,BHQU} is that the operator $\calo$ only transfers soft momenta and energies to the external state, {\it e.g.} with $\calo(1/R)$ sizes, although more general powers of $R$ can also be considered.  In qubit models, this is naturally implemented since the qubit excitations have energies $\sim 1/R$, as long as $\calo$ only acts on qubits that have begun to exit the horizon region.  The final result is that the interactions \eqref{HIex} not only yield entanglement transfer rates of size $\calo(1/R)$, but also 
 can give $\calo(1)$ modifications to scattering amplitudes which have energy and momentum transfers $\calo(1/R)$.  
 
 One can ask about other effects besides corrections to these amplitudes, {\it e.g.} on an infalling external observer.  From this outside perspective, a simple test is to inquire whether  \eqref{HIex} can give a significant coherent shift to the external hamiltonian.  To estimate the size of such a shift, consider the expectation value in a generic BH state,
@@ -583,7 +583,7 @@ The models also eliminate excitations from the internal matter, through the proj
 are no longer part of the internal system, and so one likewise expects ``disappearance" of excitations or particles from the internal state in a more complete model, having an effect on internal observers.  The models do however offer the apparent virtue of hiding this elimination of excitations, due to the complexity of the unitary internal mixing\cite{AEHPV}.
 
 If the Hilbert space structure of quantum gravity is such that the BH and environment are distinct subsystems, and evolution both describes ultimate BH disappearance and is instead unitary, one requires\cite{BHthm} interactions to transfer the information to the external state.  Scenarios for this have been investigated, with the goal of describing interactions with ``minimal" effect on infalling or other near-BH observers, in the approach of 
-``nonviolent unitarization"\cite{SGmodels,NVNL,NVUEFT,NVNLT}\cite{NVU,BHQU};
+``nonviolent unitarization" \cite{SGmodels,NVU,NVNL,NVUEFT,NVNLT,BHQU};
 such interactions have a different effect on the respective subsystems than the nonisometric models.  
 Models for nonviolent unitarization that go beyond the qubit models surmount some important challenges, although there are also remaining questions regarding a more complete dynamics.  
 
