--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-04-05 07:48:32 -0400 
+%% Created for Pete Su at 2024-06-04 19:26:07 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Giddings2023a,
+	author = {Steven B. Giddings},
+	date-added = {2024-06-04 19:25:27 -0400},
+	date-modified = {2024-06-04 19:25:47 -0400},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/2212.14551v2}{arxiv:2212.14551}},
+	title = {{Comparing models for a unitary black hole S-matrix}},
+	year = {2022}}
 
 @book{Needham2023,
 	author = {Needham, Tristan and Penrose, Roger},
