--- a/2110.10690/bhthm5.tex
+++ b/2110.10690/bhthm5.tex
@@ -255,7 +255,7 @@ structure\cite{SGalg}\cite{QFG}\cite{DoGi4,SGsplit} -- or whether gravity is som
 
 \subsubsection{Identical exterior evolution}
 
-The property of identical exterior evolution can also be illustrated in the LQFT approximation, but stated in the more general context.  Fig.~\ref{Figslices} shows two slices through a black hole geometry, with possibly different internal components $\psi_{BH,i}$, or excitations, labelled by $i$, of the state on the first slice.  If one considers LQFT evolution between the slices -- which can be very concretely described in terms of a hamiltonian,\footnote{See \cite{SGsch,SG2d,GiPe} for recent explicit treatment of such hamiltonians.} then the differences in the internal state do not affect the evolution of the external part of the state:  the evolution operator $U(t)$ maps 
+The property of identical exterior evolution can also be illustrated in the LQFT approximation, but stated in the more general context.  Fig.~\ref{Figslices} shows two slices through a black hole geometry, with possibly different internal components $\psi_{BH,i}$, or excitations, labelled by $i$, of the state on the first slice.  If one considers LQFT evolution between the slices -- which can be very concretely described in terms of a Hamiltonian,\footnote{See \cite{SGsch,SG2d,GiPe} for recent explicit treatment of such Hamiltonians.} then the differences in the internal state do not affect the evolution of the external part of the state:  the evolution operator $U(t)$ maps 
 \beq\label{indepev}
 |\psi_{BH,i},\psi_{env}\rangle\ \rightarrow\ |\Psi(t)\rangle =|\psi_{BH,i}',\psi_{env}'\rangle
 \eeq
@@ -280,7 +280,7 @@ which if this condition holds is expected to be independent of $i$.  However, de
 \eeq
 is independent of the black hole state $i$ for all such operators in the observable subalgebra $\cala_{env}$.  
 
-In the example of description in terms of  LQFT on a background, this property of identical exterior evolution follows from the locality property of LQFT, which states that operators acting to change the inside part of the state on the initial slice will always commute with  future operators acting on the environment, due to the light-cone structure of the background.  This can alternately be described in terms of the hamiltonian.  One might ask whether it remains true with dynamical geometry.  In fact, one can substantially account for such dynamics by semiclassically including the effects of the backreaction such as in \cite{CGHS}.  The description continues to exhibit the property of external independence of the state, arising from the presence of an effective horizon in the semiclassically corrected geometry (see, {\it e.g.} \cite{GiNe} for some discussion).
+In the example of description in terms of  LQFT on a background, this property of identical exterior evolution follows from the locality property of LQFT, which states that operators acting to change the inside part of the state on the initial slice will always commute with  future operators acting on the environment, due to the light-cone structure of the background.  This can alternately be described in terms of the Hamiltonian.  One might ask whether it remains true with dynamical geometry.  In fact, one can substantially account for such dynamics by semiclassically including the effects of the backreaction such as in \cite{CGHS}.  The description continues to exhibit the property of external independence of the state, arising from the presence of an effective horizon in the semiclassically corrected geometry (see, {\it e.g.} \cite{GiNe} for some discussion).
 
 \subsubsection{Disappearance}
 
@@ -307,7 +307,7 @@ So, to evade the theorem, and restore the primacy of quantum mechanics, one appa
 \section{Proposals for evasion}
 
 
-There have been various proposed escapes from the reasoning surrounding the problem.  A good test question for better understanding and characterizing the nature of such scenarios is to ask how specifically a scenario differs from the LQFT evolution which produces the Hawking state --  which has been studied in increasing detail\footnote{For recent work to describe the evolving Hawking state, see \cite{SGsch,SG2d,GiPe}.} -- through modification of the Hilbert space, hamiltonian, or other aspect of the structure.  One approach to characterizing this difference is to understand what a scenario says about modification of the above assumptions.
+There have been various proposed escapes from the reasoning surrounding the problem.  A good test question for better understanding and characterizing the nature of such scenarios is to ask how specifically a scenario differs from the LQFT evolution which produces the Hawking state --  which has been studied in increasing detail\footnote{For recent work to describe the evolving Hawking state, see \cite{SGsch,SG2d,GiPe}.} -- through modification of the Hilbert space, Hamiltonian, or other aspect of the structure.  One approach to characterizing this difference is to understand what a scenario says about modification of the above assumptions.
 
 
 \subsection{Some older scenarios}
@@ -348,7 +348,7 @@ However, von Neumann entropy is just one diagnostic, and reproducing known curve
 
 If we focus on  more standard quantum-mechanical rules, a proposed picture is the connection to baby universes and spacetime wormholes\cite{GiStinst,Cole,GiStinc,GiSt3Q} first explored by Marolf and Maxfield\cite{MaMa,MaMarev}.  A rough picture of what could be happening is sketched in Fig.~\ref{Figbu}: a separate baby universe branches off from the black hole.  This kind of process certainly suggests a modification of the subsystem structure, and moreover suggests that information can go off into -- or return from -- a state of multiple baby universes, emitted by black holes\cite{LRT,Hawkworm}.
 
-However, at least working in an approximation, a more careful analysis\cite{Cole,GiStinc} found that this is not the case.  One can summarize the interaction of a baby universe with our universe by a correction to the hamiltonian
+However, at least working in an approximation, a more careful analysis\cite{Cole,GiStinc} found that this is not the case.  One can summarize the interaction of a baby universe with our universe by a correction to the Hamiltonian
 \beq\label{deltah}
 \Delta H = (a_{BU,A}+a_{BU,A}^\dagger) \, {\cal O}_A\ 
 \eeq
@@ -443,7 +443,7 @@ P_\mu= P_\mu^{ADM}[h(\infty)] + \int dV C_\mu
 \eeq
 where $P_\mu^{ADM}$ are the ADM expressions, and only depend on the asymptotic metric.  Then, if one has set $C_\mu=0$ by solving the constraints, the translation generators are purely asymptotic (or boundary, in the case of AdS) expressions, and have nontrivial values for dressed states. 
 
-The leading candidate for an explanation for holography has been suggested to follow from this, by Marolf\cite{MaroUH,Marothought, MaroholoNS}.  If one considers the state $|\hat J\rangle$ corresponding to a matter field excitation restricted to a neighborhood $U$ at time $t=0$, or the corresponding operator $\hat\calo_J$, then in AdS it is argued this state or operator may be related to a state or operator on the boundary of AdS to the causal future of the neighborhood $U$ through the map given by propagation of the excitations.  If this is the case, it is then argued that the hamiltonian, which is now a pure boundary term, may be used to relate the state or operator on the boundary to an earlier one at $t=0$, and that this constructs the ``holographic map" between bulk and boundary states or operators.
+The leading candidate for an explanation for holography has been suggested to follow from this, by Marolf\cite{MaroUH,Marothought, MaroholoNS}.  If one considers the state $|\hat J\rangle$ corresponding to a matter field excitation restricted to a neighborhood $U$ at time $t=0$, or the corresponding operator $\hat\calo_J$, then in AdS it is argued this state or operator may be related to a state or operator on the boundary of AdS to the causal future of the neighborhood $U$ through the map given by propagation of the excitations.  If this is the case, it is then argued that the Hamiltonian, which is now a pure boundary term, may be used to relate the state or operator on the boundary to an earlier one at $t=0$, and that this constructs the ``holographic map" between bulk and boundary states or operators.
 
 In fact, given the preceding discussion, there is a simpler candidate for relating localized states or operators to asymptotic observables, given in \cite{DoGi3}:  one can act on the state $|\hat J\rangle$ by a translation generator $P_i^{ADM}$ which is purely an asymptotic operator, to translate the excitation out to the asymptotic region, and then detect it via an asymptotic observable.  Explicitly, one can for example consider the expression
 \beq
@@ -474,7 +474,7 @@ This last version of the theorem implies that there {\it must} be interactions o
 
 One can explore such interactions in a principled parameterization of ignorance.  Such parameterizations can have remarkable power; an example is the derivation of the field theory of the Standard Model via such a parameterization, after assuming the relevant symmetries.  More discussion appears in \cite{BHQU} and the other references, but a brief summary will be given here.  We work about the approximation in which the black hole and environment are subsystems, and parameterize the necessary interactions.
 
-If we consider a quantum state of black hole plus environment, $|\Psi\rangle \sim |\psi_{BH,i},\psi_{env}\rangle$, the LQFT evolution will give identical exterior evolution, so must receive a correction, so the hamiltonian is of the form
+If we consider a quantum state of black hole plus environment, $|\Psi\rangle \sim |\psi_{BH,i},\psi_{env}\rangle$, the LQFT evolution will give identical exterior evolution, so must receive a correction, so the Hamiltonian is of the form
 \beq
 H=H_{LQFT} + \Delta H\ .
 \eeq
@@ -495,7 +495,7 @@ These assumptions can be satisfied with an expression
 \Delta H = \sum_A \lambda^A \int dV G_A^{\mu\nu}(x)\,T_{\mu\nu}(x)
 \eeq
 where $T_{\mu\nu}$ is the stress tensor (including perturbative gravitons), where the integral includes the exterior of the black hole, and where $G^{\mu\nu}_A(x)$ can be thought of as ``form factors," and have support and spatial variation on scales $r\sim R$.  These are part of the parameterization of ignorance, and should be ultimately derived from a more fundamental description of the states and dynamics of the theory.  
-The hamiltonian correction \eqref{DHT} can be reorganized in the form
+The Hamiltonian correction \eqref{DHT} can be reorganized in the form
 \beq
 \Delta H = \int dV\, H^{\mu\nu}(x) \,T_{\mu\nu}(x)\ ,
 \eeq
@@ -519,7 +519,7 @@ A simple estimate of the information transfer rate is the following.  First, if 
 \beq\label{inforate}
 \frac{dI}{dt}\sim \frac{dP}{dt}=2\pi\rho(E_f) |\Delta H|^2
 \eeq
-where $\rho(E_f)$ is the density of final states of the combined subsystems, and $|\Delta H|$ is the typical size of the matrix elements of the perturbation hamiltonian.
+where $\rho(E_f)$ is the density of final states of the combined subsystems, and $|\Delta H|$ is the typical size of the matrix elements of the perturbation Hamiltonian.
 
 In the case where subsystem $A$ is a black hole, the density of final states includes a factor $\exp\{S_{bh}\}$, where $S_{bh}$ is a black hole entropy expected to take on a large size, {\it e.g.} comparable to the Bekenstein-Hawking entropy, $S_{BH}=A/4G$.  This means that the rate \eqref{inforate} can be of order $1/R$ if the typical size of matrix elements is\cite{NVU}
 \beq
